# prime_Junyin_Luo

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  prime.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  modules.rst  prime_jl6530.rst
prime_test/: test_prime.py
src/prime_jl6530/: __init__.py
tests/: test_prime_jl6530.py
